drop repository.getAll