@@ -1,9 +1,9 @@
 package io.zeitwert.fm.building;
 
-import io.zeitwert.dddrive.app.model.RequestContext;
 import io.zeitwert.fm.account.model.ObjAccount;
 import io.zeitwert.fm.account.model.ObjAccountRepository;
 import io.zeitwert.fm.account.model.enums.CodeCurrency;
+import io.zeitwert.fm.app.model.RequestContextFM;
 import io.zeitwert.fm.building.model.ObjBuilding;
 import io.zeitwert.fm.building.model.ObjBuildingPartElementRating;
 import io.zeitwert.fm.building.model.ObjBuildingRepository;
@@ -25,7 +25,7 @@ import static org.junit.jupiter.api.Assertions.*;
 public class BuildingTest {
 
 	@Autowired
-	private RequestContext requestCtx;
+	private RequestContextFM requestCtx;
 
 	@Autowired
 	private ObjAccountRepository accountRepo;
@@ -139,8 +139,8 @@ public class BuildingTest {
 
 	}
 
-	private ObjAccount getTestAccount(RequestContext requestCtx) {
-		return this.accountRepo.get(this.accountRepo.getAll(requestCtx.getTenantId()).get(0));
+	private ObjAccount getTestAccount(RequestContextFM requestCtx) {
+		return this.accountRepo.get(this.accountRepo.find(null, requestCtx).getFirst());
 	}
 
 	private void initBuilding(ObjBuilding building) {
